[package]
edition = "2018"
name = "lua-to-ts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
full_moon = {version = "0.15.0", features = ["roblox"]}
swc_atoms = "0.2.9"
swc_common = "0.17.9"
swc_ecma_ast = "0.68.3"
swc_ecma_codegen = "0.93.3"

[profile.dev.package.full_moon]
opt-level = 2
