[package]
edition = "2018"
name = "lua-to-ts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
progressbar = ["console", "indicatif"]

[dependencies]
console = {version = "0.15.0", optional = true}
exitcode = "1.1.2"
full_moon = {version = "0.15.0", features = ["roblox"]}
indicatif = {version = "0.16.2", optional = true}
lazy_static = "1.4.0"
swc_atoms = "0.2.9"
swc_common = "0.17.17"
swc_ecma_ast = "0.70.0"
swc_ecma_codegen = "0.96.0"

[profile.dev.package.full_moon]
# Fixes stack overflow from non-optimised recursion while parsing
opt-level = 2
