[package]
edition = "2018"
name = "lua-to-ts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
progressbar = ["console", "indicatif"]

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
console = { version = "0.15.0", optional = true }
exitcode = "1.1.2"
full_moon = { version = "0.15.0", features = ["roblox"] }
indicatif = { version = "0.16.2", optional = true }
itertools = "0.10.3"
lazy_static = "1.4.0"
rbx_binary = "0.6.6"
rbx_dom_weak = "2.4.0"
rbx_types = "1.4.2"
rbx_xml = "0.12.4"
swc_atoms = "0.4.24"
swc_common = "0.29.13"
swc_ecma_ast = "0.94.17"
swc_ecma_codegen = "0.127.29"

[profile.dev.package.full_moon]
# Fixes stack overflow from non-optimised recursion while parsing
opt-level = 2
